--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 :root {
+  --currentColor: rgb(0, 0, 255);
   --backgroundColor: #202020;
   --baseColor: white;
   --colorTwo: #6e6e6e;
@@ -10,7 +11,7 @@
 
 html {
   font-size: 100%;
-  font-family: 'Fira Code', monospace;
+  font-family: "Fira Code", monospace;
 }
 
 body {
@@ -20,6 +21,13 @@ body {
   hyphens: auto;
   background: var(--backgroundColor);
   color: var(--baseColor);
+}
+
+fieldset {
+  margin: 1rem 0.5rem;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
 }
 
 h1 {
@@ -36,7 +44,7 @@ h2 {
 
 h1,
 h2 {
-  margin: 0 0 0.5rem;
+  margin: 0 1rem 0.5rem;
 }
 
 p,
@@ -44,20 +52,14 @@ label,
 li {
   font-weight: 400;
   color: var(--baseColor);
-  font-size: 1rem;
+  font-size: 0.95rem;
   line-height: 1.6;
   padding: 0;
   margin: 0;
 }
 
-
-
-.hero {
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-  max-width: none;
-  padding: 0;
+label {
+  margin: 0 0.5rem;
 }
 
 .title-header {
@@ -66,9 +68,15 @@ li {
   flex-direction: column-reverse;
   height: 100%;
   color: var(--baseColor);
-  padding: 10vh 1rem;
+  padding: 5vh 1rem;
   margin: 0 auto;
   max-width: 1400px;
+}
+
+main {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 1rem;
 }
 
 article {
@@ -77,16 +85,21 @@ article {
   padding: 1rem;
 }
 
-.container-card {
+.top {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
+.container-cards {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
 
 .color-card {
   text-align: left;
-  background: white;
+  background-color: white;
   transition: transform 300ms ease-in-out, box-shadow 400ms ease, background 100ms ease;
   cursor: pointer;
   padding: 0;
@@ -100,16 +113,14 @@ article {
   flex-flow: column;
   transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   max-width: 350px;
-  margin: 1rem;
-
+  margin: 0.5rem;
 }
 
 .color-card:hover {
   cursor: pointer;
 }
 
-
-.my-color{
+.my-color {
   flex: 1;
   height: 100%;
   min-height: 200px;
@@ -118,33 +129,28 @@ article {
   position: relative;
   display: flex;
   align-items: stretch;
-  background-color: #0000ff;
+  background-color: var(--currentColor);
 }
 
 .card-info {
- padding: 1.5rem;
-    
+  padding: 1.5rem;
 }
 
 .name,
-#hexcode,
+.hex,
 .rgb,
 .hsl {
   color: var(--backgroundColor);
   font-size: 1rem;
 }
 
-#hexcode,
+.hex,
 .rgb,
 .hsl {
   color: gray;
 }
 
-
-
 @media only screen and (min-width: 500px) {
-
-
   h1 {
     font-size: 4rem;
   }
@@ -157,10 +163,4 @@ article {
 }
 
 @media only screen and (min-width: 1000px) {
-  
 }
-
-
-
-
-
